ingress-test.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-test

---
apiVersion: v1
kind: Pod
metadata:
  name: echo-server
  namespace: ingress-test
  labels:
    app: echo
spec:
  containers:
  - name: echo
    image: hashicorp/http-echo
    args:
    - "-text=hello"
    ports:
    - containerPort: 5678

---
apiVersion: v1
kind: Service
metadata:
  name: echo-service
  namespace: ingress-test
spec:
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  selector:
    app: echo
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5678

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: ingress-test
spec:
  podSelector: {}
  policyTypes:
  - Ingress
